# itf-tennis-scraper

./: .gitignore  README.md  __init__.py  build_and_deploy.py  fix_all.py  hook-playwright.py  main.py  pyproject.toml  quick_start.py  requirements.txt  setup.py  tennis_scraper.py  test_github.py  upload_helper.py
scripts/: lint_code.py  run_tests.py  setup_dev.py
tennis_scraper/: __init__.py  app.py  config.py
tennis_scraper/components/: __init__.py
tennis_scraper/core/: engine.py  interfaces.py  models.py
tennis_scraper/gui/: __init__.py  main_window.py
tennis_scraper/gui/components/: control_panel.py  log_viewer.py  matches_table.py  settings_panel.py  status_bar.py
tennis_scraper/gui/dialogs/: __init__.py  about_dialog.py  export_dialog.py  update_dialog.py
tennis_scraper/gui/styles/: __init__.py  dark_theme.py  light_theme.py  themes.py
tennis_scraper/gui/workers/: scraping_worker.py  update_worker.py
tennis_scraper/scrapers/: base.py  flashscore.py  sofascore.py
tennis_scraper/updates/: __init__.py  checker.py  downloader.py  installer.py
tennis_scraper/utils/: __init__.py  export.py  logging.py  settings.py  validators.py
tests/: conftest.py  test_base.py  test_models.py
